--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -13,12 +13,19 @@ import LinkButton from "@components/LinkButton.astro";
     <div class="not-found-wrapper">
       <h1 aria-label="404 Not Found">404</h1>
       <span aria-hidden="true">¯\_(ツ)_/¯</span>
-      <p>Page Not Found</p>
+      <p>Página no encontrada</p>
+      <img
+        src="https://midu.dev/images/this-is-fine-404.gif"
+        alt="404 Not Found"
+        width="400"
+        height="400"
+        class="mt-8"
+      />
       <LinkButton
         href="/"
-        className="my-6 underline decoration-dashed underline-offset-8 text-lg"
+        className="my-6 text-lg underline decoration-dashed underline-offset-8"
       >
-        Go back home
+        Volver al inicio
       </LinkButton>
     </div>
   </main>
