--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -13,9 +13,9 @@ const posts = await getCollection("blog");
 let tags = getUniqueTags(posts);
 ---
 
-<Layout title={`Tags | ${SITE.title}`}>
-  <Header activeNav="tags" />
-  <Main pageTitle="Tags" pageDesc="All the tags used in posts.">
+<Layout title={`Etiquetas | ${SITE.title}`}>
+  <Header activeNav="etiquetas" />
+  <Main pageTitle="Etiquetas" pageDesc="Todas las etiquetas de los posts">
     <ul>
       {tags.map(({ tag }) => <Tag {tag} size="lg" />)}
     </ul>
