una falta  de ortografia bro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p class="text-pretty">
-        MiduSources es un blog crado usando la plantilla de <LinkButton
+        MiduSources es un blog creado usando la plantilla de <LinkButton
           className="underline decoration-dashed underline-offset-4 hover:text-skin-accent"
           href="https://astro.build/"
         >
